--- a/计算机网络.md
+++ b/计算机网络.md
@@ -135,5 +135,15 @@
 	</tr>
 </table>
 
+OSI 七层模型各层任务和功能：
 
+1. 物理层：实现相邻节点之间比特的传输；定义电路接口参数、信号的含义、电气特性等；单位：比特；
+2. 数据链路层：确保相邻节点之间的链路逻辑上无差错（检错、纠错或丢弃、重传）；差错控制、流量控制；单位：帧（Frame，含多个比特）；
+3. 网络层：把分组从源结点转发到目的结点；路由选择，分组转发，拥塞控制，网际互联；单位：分组（Packet，数据报）；
+4. 运输层：实现端到端通信（进程到进程通信，端指端口）；单位：报文段（Segment）；
+5. 会话层：管理进程间会话；会话管理；
+6. 表示层：解决不同主机信息表示（编码等）不一致的问题；数据格式转换；
+7. 应用层：实现特定的网络应用；单位：报文（Message）。
+
+TCP/IP 模型：
 
