--- a/计算机网络.md
+++ b/计算机网络.md
@@ -147,3 +147,31 @@ OSI 七层模型各层任务和功能：
 
 TCP/IP 模型：
 
+1. 网络接口层：实现相邻结点之间的数据传输（为网络层传输“分组”）；
+2. 网络层：把分组从源结点转发到目的结点；路由选择，分组转发，拥塞控制，网际互联；
+3. 传输层：实现端到端（进程到进程）通信；复用和分用，差错控制，流量控制，连接管理，可靠传输管理；
+4. 应用层：实现特定网络应用。
+
+重要层级对比：
+
+|        | OSI  提供的服务                                              | TCP/IP提供的服务                                             | OSI  提供的功能                                              | TCP/IP提供的功能                                             |
+| ------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 传输层 | 仅可向上层提供有连接的可靠的服务；功能                       | 可向上层提供有连接可靠的服务（TCP 协议）和无连接不可靠的服务（UDP 协议） | 复用和分用、差错控制、流量控制、连接建立与释放、可靠传输管理 | 复用和分用、差错控制、流量控制、连接建立与释放、可靠传输管理 |
+| 网络层 | 可向上提供有连接可靠的服务（虚电路）和无连接不可靠的服务（数据报） | 仅向上层提供无连接不可靠的服务（数据报）                     | 路由选择、分组转发、拥塞控制、网际互连、差错控制、流量控制、连接建立与释放、可靠传输管理 | 路由选择、分组转发、拥塞控制、网际互连                       |
+
+
+
+## 通信基础
+
+![通信基础基本概念](C:\Users\hawthorn\Desktop\笔记\cloud\通信基础基本概念.png)
+
+
+
+## 信道的极限容量
+
+![信道的极限容量](C:\Users\hawthorn\Desktop\笔记\cloud\信道的极限容量.png)
+
+
+
+## 编码&解码、调制&解调
+
